Delete Task List

--- a/TODO_App_API.postman_collection.json
+++ b/TODO_App_API.postman_collection.json
@@ -226,6 +226,39 @@
                             ]
                         }
                     }
+                },
+                {
+                    "name": "Delete Task List",
+                    "request": {
+                        "auth": {
+                            "type": "bearer",
+                            "bearer": [
+                                {
+                                    "key": "token",
+                                    "value": "{{token}}",
+                                    "type": "string"
+                                }
+                            ]
+                        },
+                        "method": "DELETE",
+                        "header": [
+                            {
+                                "key": "Accept",
+                                "value": "application/json"
+                            }
+                        ],
+                        "url": {
+                            "raw": "{{baseUrl}}/api/task-lists/1",
+                            "host": [
+                                "{{baseUrl}}"
+                            ],
+                            "path": [
+                                "api",
+                                "task-lists",
+                                "1"
+                            ]
+                        }
+                    }
                 }
             ]
         },
