--- a/TODO_App_API.postman_collection.json
+++ b/TODO_App_API.postman_collection.json
@@ -431,6 +431,48 @@
                     }
                 },
                 {
+                    "name": "Reorder Tasks",
+                    "request": {
+                        "auth": {
+                            "type": "bearer",
+                            "bearer": [
+                                {
+                                    "key": "token",
+                                    "value": "{{token}}",
+                                    "type": "string"
+                                }
+                            ]
+                        },
+                        "method": "POST",
+                        "header": [
+                            {
+                                "key": "Accept",
+                                "value": "application/json"
+                            }
+                        ],
+                        "body": {
+                            "mode": "raw",
+                            "raw": "{\n    \"task_ids\": [1, 3, 2]\n}",
+                            "options": {
+                                "raw": {
+                                    "language": "json"
+                                }
+                            }
+                        },
+                        "url": {
+                            "raw": "{{baseUrl}}/api/tasks/reorder",
+                            "host": [
+                                "{{baseUrl}}"
+                            ],
+                            "path": [
+                                "api",
+                                "tasks",
+                                "reorder"
+                            ]
+                        }
+                    }
+                },
+                {
                     "name": "Show Task",
                     "request": {
                         "auth": {
