update task list

--- a/TODO_App_API.postman_collection.json
+++ b/TODO_App_API.postman_collection.json
@@ -269,6 +269,48 @@
                     }
                 },
                 {
+                    "name": "Update Task List",
+                    "request": {
+                        "auth": {
+                            "type": "bearer",
+                            "bearer": [
+                                {
+                                    "key": "token",
+                                    "value": "{{token}}",
+                                    "type": "string"
+                                }
+                            ]
+                        },
+                        "method": "PUT",
+                        "header": [
+                            {
+                                "key": "Accept",
+                                "value": "application/json"
+                            }
+                        ],
+                        "body": {
+                            "mode": "raw",
+                            "raw": "{\n    \"name\": \"Updated Task List Name\"\n}",
+                            "options": {
+                                "raw": {
+                                    "language": "json"
+                                }
+                            }
+                        },
+                        "url": {
+                            "raw": "{{baseUrl}}/api/task-lists/1",
+                            "host": [
+                                "{{baseUrl}}"
+                            ],
+                            "path": [
+                                "api",
+                                "task-lists",
+                                "1"
+                            ]
+                        }
+                    }
+                },
+                {
                     "name": "Delete Task List",
                     "request": {
                         "auth": {
